# Fokker_challenge_private

./: FokkerChallenge.lean  Main.lean  README.md  index.html  lake-manifest.json  lakefile.toml  qa.html  undecided_terms.json
.github/workflows/: deploy.yml  lean_action_ci.yml
FokkerChallenge/: Basic.lean  BasisResult.lean  CountBvar.lean  CountFvar.lean  FvarSubset.lean  GenTerms.lean  GenTermsComplete.lean
FokkerChallenge/Decider/: All0.lean  EveryBvarUsed.lean  NoDuplicate.lean  TwoVarsAreNotEnough.lean
FokkerChallenge/EncoderDecoder/: Basic.lean  Decode.lean  Encode.lean
FokkerChallenge/EnhancedCslib/: AbsMustExists.lean  Basic.lean  CountBvar.lean  CountFvar.lean  DoubleEta.lean  Fmt.lean  FvarSubset.lean  NormalForm.lean
FokkerChallenge/GenFinite/: LA0L1.lean  Readme.md  finite.json
rust-scripts/: .gitignore  Cargo.toml  Makefile  basis_extract_result.json  index.html
rust-scripts/src/: lib.rs
