[package]
name = "rust-scripts"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lambda_calculus = {git= "https://github.com/awesome-lambda-calculus/lambda_calculus_rust", branch = "fokker_challenge" }
wasm-bindgen = "0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }